# pytorch-approx-topk

./: .clang-format  .gitignore  LICENSE  README.md  environment.simg  pyproject.toml
approx_topk/: __init__.py  autobucket.py  bucket_argmax.py  bucket_argmax2.py  bucketed.py  cuda_extensions.py  priority_queue.cu  priority_queue.py  priority_queue_approx_topk.cu  radix_select.cu  radix_select.py  torch_default.py
approx_topk/exact_methods/: __init__.py  radix_select.py  radix_select_topk.cu  torch_default.py
approx_topk/experimental/: autobucket.py  bucket_argmax.py
benchmarks/: measure_speed.py  plot_bandwidth.py  run_cumulative_recall.py  run_recall.py  run_speed.py
data/: graph-data-merged.jsonl  graph-recall-data.csv  measure_speed_sparq_multi2.jsonl  sparq_v1.jsonl  sparq_v2.jsonl  theoretical_models.jsonl
data/correlation/: seq_len.jsonl
notebooks/: 20240812-benchmarks-a10.ipynb  20240906-modelling.ipynb  20240910-modelling-v2.ipynb  20240910-verify-algorithms.ipynb  20240911-compare-models.ipynb  20240911-paper-figures.ipynb  20240911-standardise-tasks.ipynb  20240912-benchmarks-3090.ipynb  20240912-compare-models-v2.ipynb  20240912-final-figures.ipynb  20240912-varying-sequence-correlation.ipynb  20240913-varying-sequence-correlation-figs.ipynb  20240915-paper-figures.ipynb  schematic.drawio  theoretical_models.py
notebooks/20240814-sweep-bucket-argmax/: analysis.ipynb  run_sweep.py
notebooks/20240911-sparq/: 20240911-sparq-v1.ipynb  20240911-sparq-v2.ipynb
notebooks/data/: graph-speed-data.jsonl  theoretical_models.jsonl
notebooks/data/correlation/: results.jsonl
notebooks/data/generic2/: measure_speed_approx_finer_multi2.jsonl  measure_speed_exact_finer.jsonl
tests/: helper_funcs.py  test_autobucket.py  test_bucket_argmax.py  test_bucketed.py  test_exact_methods.py  test_priority_queue.py  test_radix_select.py
